--- a/style.css
+++ b/style.css
@@ -125,3 +125,32 @@ justify-content: space-around;
     font-size: 20px;
     padding:0 20px 20px 20px;
 }
+
+/* features fo our platform */
+
+.features{
+    background-color: #D7CE36;
+    margin: 0;
+}
+.fcontent{
+    background-color: #EF476F;
+    width: 55%;
+    height: 80%;
+    margin: 30px 0px 30px 30px;
+    padding: 30px 0 30px 30px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+border-radius: 15px;}
+.flex{
+    display: flex;
+    align-items: center;
+}
+.bold{
+    font-weight: bold;
+}
+.ftext{
+    font-size: 20px;
+}
+.headfeatures{
+    font-size: 50px;
+    text-align: center;
+}
