--- a/stylemobile.css
+++ b/stylemobile.css
@@ -26,6 +26,7 @@
         display: flex;
         justify-content: center;
         margin: auto;
+        padding-left: 20px;
     }
     .off{
         display: flex;
