--- a/style.css
+++ b/style.css
@@ -189,3 +189,96 @@ justify-content: space-around;
 .social-icons a:hover {
     color: red;
 }
+
+
+/* contact form*/
+
+
+
+.contact{
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.contact-left{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.contact-left-title{
+    display: flex;
+    height: 0;
+    flex-direction: column;
+    margin: auto;
+    
+}
+.contact-left-title h2{
+    font-size: 8rem;
+    font-weight: 600;
+    margin: 0;
+    align-items: center;
+    margin: auto;
+    opacity: 40%;
+    height: 0;
+    color: #525252;
+}
+.contact-left-title h1{
+    font-size: 3rem;
+    font-weight: 600;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.contact-inputs{
+    background-color: #8a8a8a;
+    width: 450px;
+    height: 50px;
+    outline: none;
+    padding: 500;
+    
+    font-size: 15px;
+    padding-left: 15px;
+    border-radius: 20px;
+}
+.contact-left textarea{
+    height: 80px;
+    padding: 15px;
+    padding-right: 0;
+    background-color: #8a8a8a;
+    
+    outline: none;
+}
+.contact-inputs:focus{
+    border: 2px solid #ff7629;
+}
+.contact-inputs::placeholder{
+    color: black;
+}
+.contact-left button{
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: wheat;
+    gap: 10px;
+    border: none;
+    background: linear-gradient(270deg, #ff7629,#fa6d86);
+    cursor: pointer;
+    border-radius: 20px;
+
+}
+#overlay {
+z-index:100;
+}
+.over{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+.conform{
+    background-color: brown;
+    color: wheat;
+    padding-bottom: 20px;
+}
