--- a/stylemobile.css
+++ b/stylemobile.css
@@ -1,5 +1,9 @@
 @media screen and (max-width: 749px) {
 
+    .head{
+        height: 60px;
+        font-size: 40;
+    }
     .hero1{
     display: flex;
     flex-direction: column-reverse;
@@ -80,4 +84,28 @@
     .footer-section{
         padding: 10px;
     }
+
+
+    /* Contact form*/
+
+    .contact-left-title h2{
+        font-size: 4rem;
+    }
+    .contact-left-title h1{
+        font-size: 2rem;
+        font-weight: 600;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .contact-inputs{
+        width: 250px;
+        margin-top: 0;
+    }
+    .headtext{
+        display: none;
+    }
+    .contact{
+        margin-top: 100px;
+    }
+
 }
