--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
 
-.head{
+.head {
     background-color: #7678ED;
     height: 80px;
     font-size: 50px;
@@ -11,32 +11,39 @@ body{
     align-items: center;
     padding-left: 20px;
 }
-.hero1{
-    background: rgb(241,135,1);
-background: linear-gradient(0deg, rgba(241,135,1,1) 25%, rgba(243,91,4,1) 25%);
-display: flex;
-justify-content: space-around;
+
+.hero1 {
+    background: rgb(241, 135, 1);
+    background: linear-gradient(0deg, rgba(241, 135, 1, 1) 25%, rgba(243, 91, 4, 1) 25%);
+    display: flex;
+    justify-content: space-around;
 }
-.heroimage{
+
+.heroimage {
     height: 500px;
     padding: 20px 0 50px 0;
 }
-.herotext{
+
+.herotext {
     display: flex;
     flex-direction: column;
     margin-top: 50px;
 }
-.off{
+
+.off {
     display: flex;
     margin-top: 100px;
 }
-.herohead{
+
+.herohead {
     font-size: 50px;
 }
-.herodes{
+
+.herodes {
     font-size: 30px;
 }
-.button{
+
+.button {
     font-size: 20px;
     background-color: #7678ED;
     border-radius: 10px;
@@ -44,45 +51,51 @@ justify-content: space-around;
     border: 0;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-.button:active{
+
+.button:active {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-.hero2{
+
+.hero2 {
     background-color: #3D348B;
 }
-.batchcards{
-    
+
+.batchcards {
+
     display: flex;
     justify-content: space-around;
 }
 
-.class11th{
+.class11th {
     background-color: #7678ED;
     height: 800px;
     width: 829px;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    margin:0 50px 50px 50px;
+    margin: 0 50px 50px 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
 }
 
-.imgcards{
+.imgcards {
     height: 750px;
     border-radius: 20px;
 }
-.headhero2{
+
+.headhero2 {
     display: flex;
     justify-content: center;
     font-size: 20px;
     color: #f7b801;
 }
-.hero3{
+
+.hero3 {
     background-color: #ef476f;
-    padding: 20px 0 ;
+    padding: 20px 0;
 }
-.values1{
+
+.values1 {
     background-color: #5ef2d5;
     display: flex;
     justify-content: space-around;
@@ -90,7 +103,8 @@ justify-content: space-around;
     margin: 20px 0 20px 20px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
-.values2{
+
+.values2 {
     background-color: #60b5ff;
     display: flex;
     justify-content: space-around;
@@ -98,7 +112,8 @@ justify-content: space-around;
     margin: 20px 20px 20px 0;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
-.values3{
+
+.values3 {
     background-color: #f35252;
     display: flex;
     justify-content: space-around;
@@ -106,7 +121,8 @@ justify-content: space-around;
     margin: 20px 0 20px 20px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
-.values4{
+
+.values4 {
     background-color: #f79d65;
     display: flex;
     justify-content: space-around;
@@ -114,78 +130,93 @@ justify-content: space-around;
     margin: 20px 20px 20px 0;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
-.imagee{
+
+.imagee {
     height: 350px;
 }
-.headhero3{
+
+.headhero3 {
     font-size: 25px;
     padding: 20px;
 }
-.deshero3{
+
+.deshero3 {
     font-size: 20px;
-    padding:0 20px 20px 20px;
+    padding: 0 20px 20px 20px;
 }
 
 /* features fo our platform */
 
-.features{
+.features {
     background-color: #D7CE36;
     margin: 0;
 }
-.fcontent{
+
+.fcontent {
     background-color: #EF476F;
-    width:60%;
+    width: 60%;
     height: 80%;
     margin: 30px 0px 30px 30px;
     padding: 30px 0 30px 30px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    border-radius: 15px;}
-.flex{
+    border-radius: 15px;
+}
+
+.flex {
     display: flex;
     align-items: center;
 }
-.bold{
+
+.bold {
     font-weight: bold;
 }
-.ftext{
+
+.ftext {
     font-size: 20px;
 }
-.headfeatures{
+
+.headfeatures {
     font-size: 50px;
     text-align: center;
 }
 
 /* footer section */
 
-.footer-container{
+.footer-container {
     display: flex;
     justify-content: space-around;
     background-color: black;
     color: white;
 }
-.footer-section{
+
+.footer-section {
     padding: 50px;
     justify-items: start;
 }
-.footer-section h3{
+
+.footer-section h3 {
     text-decoration: underline;
     text-underline-offset: 0.2em;
 }
+
 .footer-section ul {
     list-style: none;
     padding: 0;
 }
+
 .footer-section ul li a {
     color: #fff;
     text-decoration: none;
     padding: 0.5em;
 }
+
 .social-icons a {
     margin-right: 10px;
     color: #fff;
     text-decoration: none;
     font-size: 2em;
 }
+
 .social-icons a:hover {
     color: red;
 }
@@ -195,26 +226,29 @@ justify-content: space-around;
 
 
 
-.contact{
+.contact {
     margin-top: 200px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.contact-left{
+
+.contact-left {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 20px;
 }
-.contact-left-title{
+
+.contact-left-title {
     display: flex;
     height: 0;
     flex-direction: column;
     margin: auto;
-    
+
 }
-.contact-left-title h2{
+
+.contact-left-title h2 {
     font-size: 8rem;
     font-weight: 600;
     margin: 0;
@@ -224,39 +258,44 @@ justify-content: space-around;
     height: 0;
     color: #525252;
 }
-.contact-left-title h1{
+
+.contact-left-title h1 {
     font-size: 3rem;
     font-weight: 600;
     align-items: center;
     margin-top: 50px;
 }
 
-.contact-inputs{
+.contact-inputs {
     background-color: #8a8a8a;
     width: 450px;
     height: 50px;
     outline: none;
     padding: 500;
-    
+
     font-size: 15px;
     padding-left: 15px;
     border-radius: 20px;
 }
-.contact-left textarea{
+
+.contact-left textarea {
     height: 80px;
     padding: 15px;
     padding-right: 0;
     background-color: #8a8a8a;
-    
+
     outline: none;
 }
-.contact-inputs:focus{
+
+.contact-inputs:focus {
     border: 2px solid #ff7629;
 }
-.contact-inputs::placeholder{
+
+.contact-inputs::placeholder {
     color: black;
 }
-.contact-left button{
+
+.contact-left button {
     display: flex;
     align-items: center;
     padding: 15px 30px;
@@ -264,20 +303,23 @@ justify-content: space-around;
     color: wheat;
     gap: 10px;
     border: none;
-    background: linear-gradient(270deg, #ff7629,#fa6d86);
+    background: linear-gradient(270deg, #ff7629, #fa6d86);
     cursor: pointer;
     border-radius: 20px;
 
 }
+
 #overlay {
-z-index:100;
+    z-index: 100;
 }
-.over{
+
+.over {
     height: 50px;
     display: flex;
     justify-content: center;
 }
-.conform{
+
+.conform {
     background-color: brown;
     color: wheat;
     padding-bottom: 20px;
