--- a/stylemobile.css
+++ b/stylemobile.css
@@ -169,10 +169,27 @@
     .imagee{
         height: 150px;
     }
+    .navlink{
+        font-size: 0.6rem;
+    }
+    .logo{
+        height: 20px;
+    }
 }
 @media screen and (max-width: 730px) {
     .navlink{
         font-size: 1rem;
+    }
+    .logo{
+        height: 40px;
+    }
+}
+@media screen and (max-width: 460px) {
+    .navlink{
+        font-size: 0.9rem;
+    }
+    .logo{
+        height: 35px;
     }
 }
 
