--- a/stylemobile.css
+++ b/stylemobile.css
@@ -183,6 +183,9 @@
     .logo{
         height: 40px;
     }
+    .footer-container{
+        padding-bottom: 20px;
+    }
 }
 @media screen and (max-width: 460px) {
     .navlink{
