--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
     padding-left: 20px;
 }
 .logo{
-    height: 70px;
-    
+    height: 50px;
 }
 .navbar{
     display: flex;
@@ -22,6 +21,8 @@ body {
     font-size: 1.5rem;
     margin-left: auto;
     padding-right: 20px;
+    display: flex;
+    align-items: center;
 }
 .navlink{
     padding: 0 10px;
