--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
 .button {
     font-size: 20px;
     background-color: #7678ED;
+    color: black;
     border-radius: 10px;
     padding: 10px;
     border: 0;
